# qoauth

./: CMakeLists.txt
src/: interface.cpp  qoauth_global.h
